# faketory

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml  setup.cfg  test  validate.sh
faketory/: factory.py  fake.py  gens.py
faketory/placeholders/: models.py
tests/: cases.py  factories.py  models.py  test_fake.py  test_faketory.py
