[tool.poetry]
name = "faketory"
version = "0.1.2"
description = "A very simple Factory library. Generic, but compatible with Django. Let's build together!"
authors = ["warevil <jg@warevil.dev>"]
readme = "README.md"
repository = "https://github.com/warevil/faketory"

[tool.poetry.dependencies]
python = "^3.7"
faker = "^15.1.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.1"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
