[project]
name = "faketory"
version = "0.1.3"
description = "A very simple Factory library. Generic, but compatible with Django. Let's build together!"
authors = ["warevil <jg@warevil.dev>"]
readme = "README.md"
repository = "https://github.com/warevil/faketory"
requires-python = ">=3.7"

dependencies = [
    "faker>=18.13.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.7",
]
